# thrift

./: .gitignore  .travis.yml  CMakeLists.txt  bootstrap.sh  cleanup.sh  composer.json  configure.ac  phpcs.xml.dist  settings.gradle
aclocal/: ax_javac_and_java.m4
debian/: rules
lib/java/: .gitignore  CMakeLists.txt  Makefile.am  build.gradle  pom.xml  settings.gradle
lib/java/android/: build.gradle  settings.gradle
lib/java/src/main/java/org/apache/thrift/transport/: THttpClient.java
lib/java/src/test/java/org/apache/thrift/: TestStruct.java
lib/java/src/test/java/org/apache/thrift/protocol/: TestTSimpleJSONProtocol.java
lib/java/src/test/java/org/apache/thrift/server/: ServerTestBase.java  TestNonblockingServer.java
lib/java/src/test/java/org/apache/thrift/test/: TestClient.java  TestNonblockingServer.java
lib/java/src/test/java/org/apache/thrift/transport/: TestTSSLTransportFactoryCustomClient2.java  TestTSaslTransports.java  TestTSimpleFileTransport.java  TestTZlibTransport.java
lib/php/: Makefile.am  README.md
lib/php/lib/Transport/: TSocket.php
lib/php/src/ext/thrift_protocol/: config.m4  php_thrift_protocol.cpp  php_thrift_protocol.h  php_thrift_protocol7.cpp  php_thrift_protocol_binary.cpp  php_thrift_protocol_compact.cpp
test/php/: Makefile.am
tutorial/php/: PhpClient.php  PhpServer.php
